fixed parallax on mobile

--- a/style.css
+++ b/style.css
@@ -162,6 +162,10 @@ h1, h2, h3, h4, h5, h6, a, a.btn {
     html {
         font-size: 18px;
     }
+
+    .parallax-section, .black-gradient-bg {
+        background-attachment: scroll;
+    }
     
     .gallery img {
         filter: none;
